# HKD_exchange_rate_crawling_and_analysis

./: .gitignore  GEMINI.md  README.md  actual_rates_recent.csv  commands.txt  hkd_rates_30pages.csv  pyproject.toml  requirements.txt  scrape_cmb_rates_playwright.py
config/: default.yaml
scripts/: migrate_legacy_data.py  rebuild_backtests.py  run_all.py
src/hkd_fx/: __init__.py  app.py  cli.py  config.py  contracts.py  utils.py
src/hkd_fx/backtest/: compare_renderer.py  evaluator.py  orchestrator.py
src/hkd_fx/dataset/: __init__.py  canonical_store.py  registry.py  snapshot_store.py
src/hkd_fx/forecast/: __init__.py  features.py  lstm_model.py  pipeline.py  render_forecast.py
src/hkd_fx/ingestion/: cmb_client.py  incremental_sync.py  parser.py
src/hkd_fx/reporting/: forecast_report.py
tests/: test_canonical_store.py  test_evaluator.py
分析/: compare_forecast_actual.py  fit_forecast_lstm.py  trend_plot.py  未来30天预测.csv  未来30天预测.html  预测对比图.html  预测对比报告.txt  预测对比数据.csv  预测报告.txt
